--- a/src/components/Home.css
+++ b/src/components/Home.css
@@ -1,5 +1,5 @@
 .home-section {
-  background-color: salmon;
+  background-color: #ffffff;
   -webkit-columns: 2 25rem;
   -moz-columns: 2 25rem;
   columns: 2 25rem;
