--- a/src/index.css
+++ b/src/index.css
@@ -1,39 +1,5 @@
 body {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
-    "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
-}
-
-html {
-  background: url("./images/banner.png") no-repeat center center fixed;
-  -webkit-background-size: cover;
-  -moz-background-size: cover;
-  -o-background-size: cover;
-  background-size: cover;
-}
-
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
-    monospace;
-}
-
-@font-face {
-  font-family: "KingthingsItalique";
-  src: local("KingthingsItalique"),
-    url("./fonts/KingthingsItalique.ttf") format("truetype");
-}
-
-@font-face {
-  font-family: "CloisterBlack";
-  src: local("CloisterBlack"),
-    url("./fonts/CloisterBlack.ttf") format("truetype");
-}
-
-@font-face {
-  font-family: "LibreBaskerville";
-  src: local("LibreBaskerville"),
-    url("./fonts/LibreBaskerville-Regular.ttf") format("truetype");
+  padding: 0;
+  box-sizing: border-box;
 }
