--- a/src/index.css
+++ b/src/index.css
@@ -3,6 +3,8 @@ body {
   padding: 0;
   box-sizing: border-box;
   max-width: 1024px;
+  margin:auto;
+  background: rgb(73, 73, 73);
 }
 
 body::-webkit-scrollbar{
