--- a/src/index.css
+++ b/src/index.css
@@ -4,7 +4,8 @@ body {
   box-sizing: border-box;
   max-width: 1024px;
   margin:auto;
-  background: rgb(73, 73, 73);
+  /* background: rgb(73, 73, 73); */
+  background: url('./images/main-background.png');
 }
 
 body::-webkit-scrollbar{
